test/good/readInt.lat
int main() {
    int a;
    a = readInt();
    printInt(a);
    return 0;
}
