test/bad/arr_length_incr.lat
int main() {
    int[] a = new int[1];
    a.length++;
    return 0;
}
